# quip-to-outline

./: .gitignore  LICENSE  README.md  check_long_comments.py  pyproject.toml
src/quip_to_outline/: __init__.py  __main__.py  cli.py
